--- a/.github/workflows/auto_branch.yml
+++ b/.github/workflows/auto_branch.yml
@@ -9,18 +9,27 @@ jobs:
   branch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: main
 
-      # Set environment vairables to allow configuration
+      # Set environment variables to allow configuration
       - name: Set env
         run: |
           echo "GITHUB_NEW_BRANCH=$(echo ${{ github.event.issue.number }} ${{ github.event.issue.title }} | tr -Cs '[:alnum:]\n' '-' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       # Create new branch and push to remote
+      - uses: actions/checkout@v2
+        with:
+          ref: main
       - name: Auto branch
         run: |
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/yuri-norwood/going-gophers.git
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/yuri-norwood/dotfiles.git
           git checkout -b "${{ env.GITHUB_NEW_BRANCH }}"
           git push -u origin "${{ env.GITHUB_NEW_BRANCH }}"
+
+      # Add checkout comment to issue
+      - name: Add issue comment
+        uses: KeisukeYamashita/create-comment@v1
+        with:
+          comment: |
+            ```sh
+            git fetch && git checkout "${{ env.GITHUB_NEW_BRANCH }}"
+            ```
