--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.15
 
     - name: Vet
-      run: go vet ./..
+      run: go vet
 
     - name: Build
       run: go build -v ./...
