--- a/.github/workflows/auto_branch.yml
+++ b/.github/workflows/auto_branch.yml
@@ -1,6 +1,7 @@
 name: Auto Brancher
 
 on:
+  workflow_dispatch:
   issues:
     types: [opened]
 
@@ -13,18 +14,17 @@ jobs:
       # Set environment variables to allow configuration
       - name: Set env
         run: |
-          echo "GITHUB_NEW_BRANCH=$(echo ${{ github.event.issue.number }} ${{ github.event.issue.title }} | tr -Cs '[:alnum:]\n' '-' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
+          echo "GITHUB_NEW_BRANCH=$(echo '${{ github.event.issue.number }} ${{ github.event.issue.title }}' | tr -Cs '[:alnum:]\n' '-' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          echo "GITHUB_REPOSITORY=${GITHUB_REPOSITORY}" >> $GITHUB_ENV
       # Create new branch and push to remote
       - uses: actions/checkout@v2
         with:
           ref: main
       - name: Auto branch
         run: |
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ env.GITHUB_REPOSITORY }}.git
           git checkout -b "${{ env.GITHUB_NEW_BRANCH }}"
           git push -u origin "${{ env.GITHUB_NEW_BRANCH }}"
-
       # Add checkout comment to issue
       - name: Add issue comment
         uses: KeisukeYamashita/create-comment@v1
@@ -33,3 +33,4 @@ jobs:
             ```sh
             git fetch && git checkout "${{ env.GITHUB_NEW_BRANCH }}"
             ```
+            ([Go to branch](https://github.com/${{ env.GITHUB_REPOSITORY }}/tree/${{ env.GITHUB_NEW_BRANCH }}))
