--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -15,5 +15,5 @@ jobs:
         uses: DennisDenuto/go-mod-vendor-pr@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          git_user_name: GitHub Actions
-          git_user_email: github-actions@example.cpm
+          git_user_name: Yuri Norwood
+          git_user_email: 76186754+yuri-norwood@users.noreply.github.com
