--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,12 +1,15 @@
+---
+
 name: Labeler
 
-on: [pull_request]
+on:
+  - pull_request
 
 jobs:
 
   label:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v2
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: actions/labeler@v2
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
