Automatically trigger report card refresh

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -71,3 +71,8 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+
+  report:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: creekorful/goreportcard-action@v1.0
