Add base option

--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Run go-mod-vendor-pr
         uses: DennisDenuto/go-mod-vendor-pr@master
         with:
+          base: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_user_name: Yuri Norwood
           git_user_email: 76186754+yuri-norwood@users.noreply.github.com
