--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Golang Formatter
-        uses: sladyn98/auto-go-format@master
+        uses: uses: dingdayu/auto-go-format@v0.0.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
